force-app/main/default/objects/CollectionsPlan__c/CollectionsPlan__c.object-meta.xml
<CustomObject>
    <description>Collections Plans track collections activites and related invoices.</description>
    <label>Collections Plan</label>
    <nameField>
        <displayFormat>Collections #{000000}</displayFormat>
        <label>Collections Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>