force-app/main/default/objects/CollectionsPlan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that is related to this Collections Plan</description>
    <inlineHelpText>Account associated with this Collections Plan</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collections Plans</relationshipLabel>
    <relationshipName>Collections_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>