force-app/main/default/objects/CollectionsPlan__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Collections Plan is related to a case, this lookup can be populated to reference it.</description>
    <inlineHelpText>Case that this Collections Plan is related to.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Collections Plans</relationshipLabel>
    <relationshipName>Collections_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>