force-app/main/default/objects/CollectionsPlan__c/fields/CloseReason__c.field-meta.xml
<CustomField>
    <fullName>CloseReason__c</fullName>
    <description>Reason that this Collections Plan was closed</description>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Billing</fullName>
            </value>
            <value>
                <fullName>Customer Service Issue</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Partner Issue</fullName>
            </value>
            <value>
                <fullName>Send to Collections Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>