force-app/main/default/objects/CollectionsPlan__c/fields/CollectionsAgent__c.field-meta.xml
<CustomField>
    <fullName>CollectionsAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collections Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collections_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>