force-app/main/default/objects/CollectionsPlan__c/fields/CollectionsContact__c.field-meta.xml
<CustomField>
    <fullName>CollectionsContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that collection tasks are related to by default. Maps from the Account Bill To Contact.</description>
    <inlineHelpText>Contact that collection tasks are related to by default. Maps from the Account Bill To Contact.</inlineHelpText>
    <label>Collections Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collections Plans</relationshipLabel>
    <relationshipName>Collections_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>