force-app/main/default/objects/CollectionsPlan__c/fields/DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>DaysOpen__c</fullName>
    <description>Difference between the Collections Plan Start Date and End Date if the plan has an end date. Otherwise the difference between the Plan Start Date and Today.</description>
    <formula>IF(ISBLANK(StartDate__c), 0,
IF(ISBLANK(EndDate__c), TODAY() - StartDate__c, EndDate__c - StartDate__c))</formula>
    <inlineHelpText>Number of days this Collections Plan has been open</inlineHelpText>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>