force-app/main/default/objects/CollectionsPlan__c/fields/InvoiceBalance__c.field-meta.xml
<CustomField>
    <fullName>InvoiceBalance__c</fullName>
    <description>Total balance of all invoices in collections at the start of this Collections Plan.</description>
    <inlineHelpText>Total balance of all invoices in collections at the start of this Collections Plan.</inlineHelpText>
    <label>Invoice Balance</label>
    <summarizedField>CollectionsInvoice__c.InvoiceBalance__c</summarizedField>
    <summaryForeignKey>CollectionsInvoice__c.CollectionsPlan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>