force-app/main/default/objects/CollectionsPlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of this Collections Plan. &apos;Open&apos; is an active Collections Plan, &apos;Closed&apos; is an inactive Collections Plan.</description>
    <inlineHelpText>Current status of this Collections Plan. &apos;Open&apos; is an active Collections Plan, &apos;Closed&apos; is an inactive Collections Plan.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>